--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,8 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <title>{{ page.title }}</title>
+  {% if page.path contains '_post' %}
+  <link rel="stylesheet" type="text/css" href="../syntax.css">
+  <link rel="stylesheet" type="text/css" href="../style.css">
+  {% else %}
   <link rel="stylesheet" type="text/css" href="syntax.css">
   <link rel="stylesheet" type="text/css" href="style.css">
+  {% endif %}
+  
 </head>
 <body>
   {{ content }}
