--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,4 +5,5 @@ layout: default
 <h2 class="tutorial-heading">{{page.title}}</h2>
 <div class="tutorial-body">
 	{{content}}
+	<a class="download-source" href="/ael/argon-tutorials/tree/master/{{ page.source_directory }}">Download Source</a>
 </div>
