--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,21 @@ layout: default
 ---
 
 <h2 class="tutorial-heading">{{page.title}}</h2>
+<div id="page-navigation"> 
+        <div class="left"> 
+        {% if page.previous.url %} 
+                <a href="{{page.previous.url}}" title="Previous Post: 
+{{page.previous.title}}">&laquo; {{page.previous.title}}</a> 
+        {% endif %} 
+        </div> 
+
+        <div class="right"> 
+        {% if page.next.url %} 
+                <a href="{{page.next.url}}" title="next Post: 
+{{page.next.title}}">{{page.next.title}} &raquo; </a> 
+        {% endif %} 
+        </div>
+</div>
 <div class="tutorial-body">
 	{{content}}
 	<a class="download-source" href="/ael/argon-tutorials/tree/master/{{ page.source_directory }}">Download Source</a>
