--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,19 @@
   <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css">
 </head>
 <body>
+  <header>
+    <div id="argon-banner">
+      <img src="{{ site.baseurl }}/images/argonisotope.png" width="50" height="50" alt="Argon.js logo" />
+      <h1>Argon.js</h1>
+    </div>
+    <ul id="nav">
+      <li class="active">
+        <a href="{{ site.baseurl }}/index.html">Tutorials</a>
+      </li>
+      <li><a href="{{ site.baseurl }}/docs.html">Documentation</a></li>
+      <li><a href="{{ site.baseurl }}/demos.html">Demos</a></li>
+    </ul>
+  </header>
   {{ content }}
 </body>
 </html>
