--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,19 +4,19 @@ layout: default
 
 <h2 class="tutorial-heading">{{page.title}}</h2>
 <div id="page-navigation"> 
-        <div class="left"> 
         {% if page.previous.url %} 
-                <a href="{{ site.baseurl }}{{page.previous.url}}" title="Previous Post: 
+                <div class="left page-navigation"> 
+                        <a href="{{ site.baseurl }}{{page.previous.url}}" title="Previous Post: 
 {{page.previous.title}}">&laquo; {{page.previous.title}}</a> 
+                </div> 
         {% endif %} 
-        </div> 
 
-        <div class="right"> 
         {% if page.next.url %} 
-                <a href="{{ site.baseurl }}{{page.next.url}}" title="next Post: 
-{{page.next.title}}">{{page.next.title}} &raquo; </a> 
+                <div class="right page-navigation"> 
+                        <a href="{{ site.baseurl }}{{page.next.url}}" title="next Post: 
+        {{page.next.title}}">{{page.next.title}} &raquo; </a> 
+                </div>
         {% endif %} 
-        </div>
 </div>
 <div class="tutorial-body">
 	{{content}}
