Add content wrapper with 20px horizontal margins.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,8 @@
       <li><a href="{{ site.baseurl }}/demos.html">Demos</a></li>
     </ul>
   </header>
-  {{ content }}
+  <div id="content-wrapper">
+    {{ content }}
+  </div>
 </body>
 </html>
