restructured the pages, started updating content
- index.html now contains an overview of argon.js
- tutorials.html contains a narrative between the tutorials.

We should consider not using posts for the tutorials.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,16 +8,20 @@
 </head>
 <body>
   <header>
-    <div id="argon-banner">
-      <img src="{{ site.baseurl }}/images/argonisotope.png" width="50" height="50" alt="Argon.js logo" />
+    <div id="argon-banner"><a href="http://argonjs.io">
+      <img src="{{ site.baseurl }}/images/ArgonIcon50x50.png" width="50" height="50" alt="Argon.js logo" /></a>
       <h1>Argon.js</h1>
     </div>
     <ul id="nav">
       <li class="active">
-        <a href="{{ site.baseurl }}/index.html">Tutorials</a>
+        <a href="{{ site.baseurl }}/index.html">Overview</a>
       </li>
-      <li><a href="{{ site.baseurl }}/docs.html">Documentation</a></li>
-      <li><a href="{{ site.baseurl }}/demos.html">Demos</a></li>
+      <li class="active">
+        <a href="{{ site.baseurl }}/tutorials.html">Tutorials</a>
+      </li>
+      <li class="active">
+        <a href="{{ site.baseurl }}/demos.html">Demos</a>
+      </li>
     </ul>
   </header>
   <div id="content-wrapper">
