--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,14 +9,14 @@
   </div>
 
   <nav class="sidebar-nav">
-    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}/tutorials/WelcomePage">Home</a></li>
-    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}/tutorials/Overview">Overview</a></li>
-    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}/tutorials/Tutorial1">Tutorial 1</a></li>
-    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}/tutorials/Tutorial2">Tutorial 2</a></li>
-    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}/tutorials/Tutorial3">Tutorial 3</a></li>
-    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}/tutorials/Tutorial4">Tutorial 4</a></li>
-    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}/tutorials/Tutorial5">Tutorial 5</a></li>
-    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}/tutorials/Tutorial6">Tutorial 6</a></li>
+    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}tutorials/WelcomePage">Home</a></li>
+    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}tutorials/Overview">Overview</a></li>
+    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}tutorials/Tutorial1">Tutorial 1</a></li>
+    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}tutorials/Tutorial2">Tutorial 2</a></li>
+    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}tutorials/Tutorial3">Tutorial 3</a></li>
+    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}tutorials/Tutorial4">Tutorial 4</a></li>
+    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}tutorials/Tutorial5">Tutorial 5</a></li>
+    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}tutorials/Tutorial6">Tutorial 6</a></li>
 
     {% comment %}
       The code below dynamically generates a sidebar nav of pages with
