Argon 3 tutorials update

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -11,12 +11,12 @@
   <nav class="sidebar-nav">
     <li class="sidebar-nav-item"><a href="{{ site.baseurl }}tutorials/WelcomePage">Home</a></li>
     <li class="sidebar-nav-item"><a href="{{ site.baseurl }}tutorials/Overview">Overview</a></li>
-    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}tutorials/tutorial1">Tutorial 1</a></li>
-    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}tutorials/tutorial2">Tutorial 2</a></li>
-    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}tutorials/tutorial3">Tutorial 3</a></li>
-    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}tutorials/tutorial4">Tutorial 4</a></li>
-    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}tutorials/tutorial5">Tutorial 5</a></li>
-    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}tutorials/tutorial6">Tutorial 6</a></li>
+    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}tutorials/tutorial1">Tutorial 1 - Getting Started</a></li>
+    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}tutorials/tutorial2">Tutorial 2 - Compass</a></li>
+    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}tutorials/tutorial3">Tutorial 3 - Periodic Table</a></li>
+    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}tutorials/tutorial4">Tutorial 4 - Panorama Reality</a></li>
+    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}tutorials/tutorial5">Tutorial 5 - Geolocation</a></li>
+    <li class="sidebar-nav-item"><a href="{{ site.baseurl }}tutorials/tutorial6">Tutorial 6 - Use Argon.js with Vuforia</a></li>
 
     {% comment %}
       The code below dynamically generates a sidebar nav of pages with
@@ -32,7 +32,7 @@
       {% endif %}
     {% endfor %}
 
-    <a class="sidebar-nav-item" href="{{ site.baseurl }}/argon-tutorials.zip">Download</a>
+    <a class="sidebar-nav-item" href="{{ site.baseurl }}argon.js.zip">Download Argon.js</a>
     <a class="sidebar-nav-item" href="https://github.com/argonjs/argon.js">GitHub project</a>
     <span class="sidebar-nav-item">Currently v{{ site.version }}</span>
   </nav>
